samples/_failures_safe/1761328020_8ce064_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4df3226.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_c4df3226.c:132:39: error: missing terminating " character
  132 |         case TOKEN_IDENTIFIER: return "IDENTIFIER
      |                                       ^~~~~~~~~~~
./samples/SAFE/__tmp_c4df3226.c:132:9: error: expected expression at end of input
  132 |         case TOKEN_IDENTIFIER: return "IDENTIFIER
      |         ^~~~
./samples/SAFE/__tmp_c4df3226.c:132:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c4df3226.c:132:9: error: expected declaration or statement at end of input
